--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Smart Menu</title>
 </head>
+    <script src="script.js"></script>
 <body>
     <h1>Welcome to Smart Menu</h1>
 </body>
