--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Smart Menu</title>
+    <link rel="stylesheet" href="style.css">  <!-- Link to style.css (optional) -->
 </head>
-    <script src="script.js"></script>
 <body>
     <h1>Welcome to Smart Menu</h1>
+    <div id="menu"></div>
+
+    <script src="script.js"></script>  <!-- Link to your script.js -->
 </body>
 </html>
